--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "@prisma/client": "^7.2.0",
     "hono": "^4.11.3",
     "lucide-react": "^0.562.0",
-    "next": "16.1.1",
     "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-modal": "^3.16.3",
     "zod": "^4.3.5"
   },
