--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,5 +33,7 @@ jobs:
         run: |
           npm install -g pnpm
           pnpm install
+      - name: Generate Prisma Client
+        run: pnpm prisma generate
       - name: Run build
         run: pnpm run build:dev
