--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "hono": "^4.11.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -52,6 +53,7 @@
     "@stylistic/eslint-plugin": "^5.6.1",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^24.10.4",
+    "@types/nodemailer": "^7.0.4",
     "@types/pg": "^8.16.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
