nodemailerラッパーを追加

--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,8 @@
+# SMTP
+SMTP_HOST="smtp.example.com"
+SMTP_PORT=465
+SMTP_USER="user@example.com"
+SMTP_PASSWORD="password"
+
+# DB
 DATABASE_URL=postgresql://user:password@host:5432/tapin_attendance
