--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "hono": "^4.11.3",
+    "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
     "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
@@ -46,6 +47,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-modal": "^3.16.3",
+    "redis": "^5.10.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
