--- a/.gitignore
+++ b/.gitignore
@@ -41,5 +41,12 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+package-lock.json
+npm-shrinkwrap.json
+#pnpm-lock.yaml
+#pnpm-workspace.yaml
+yarn.lock
+bun.lock
+
 /src/generated/
 .eslintcache
