--- a/.env.sample
+++ b/.env.sample
@@ -5,4 +5,5 @@ SMTP_USER="user@example.com"
 SMTP_PASSWORD="password"
 
 # DB
-DATABASE_URL=postgresql://user:password@host:5432/tapin_attendance
+DATABASE_URL="postgresql://user:password@host:5432/tapin_attendance"
+REDIS_URL="rediss://user:password@host:6379/db"
