--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
     "@next/third-parties": "^16.1.1",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "cuid": "^2.1.8",
     "hono": "^4.11.3",
     "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
+    "next": "^16.1.1",
     "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
-    "next": "^16.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-modal": "^3.16.3",
