--- a/package.json
+++ b/package.json
@@ -39,7 +39,18 @@
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "cuid": "^2.1.8",
+    "@tiptap/core": "^3.15.3",
+    "@tiptap/extension-color": "^3.15.3",
+    "@tiptap/extension-hard-break": "^3.15.3",
+    "@tiptap/extension-horizontal-rule": "^3.15.3",
+    "@tiptap/extension-image": "^3.15.3",
+    "@tiptap/extension-link": "^3.15.3",
+    "@tiptap/extension-text-style": "^3.15.3",
+    "@tiptap/react": "^3.15.3",
+    "@tiptap/starter-kit": "^3.15.3",
+    "dompurify": "^3.3.1",
     "hono": "^4.11.3",
+    "isomorphic-dompurify": "^2.35.0",
     "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
     "next": "^16.1.1",
