--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,6 @@
+# Auth
+JWT_SECRET="your_jwt_secret_key" # `openssl rand -base64 32`
+
 # SMTP
 SMTP_HOST="smtp.example.com"
 SMTP_PORT=465
@@ -7,3 +10,7 @@ SMTP_PASSWORD="password"
 # DB
 DATABASE_URL="postgresql://user:password@host:5432/tapin_attendance"
 REDIS_URL="rediss://user:password@host:6379/db"
+
+# APP
+NEXT_PUBLIC_APP_URL="https://app.example.com"
+NODE_ENV=development # or production
