--- a/package.json
+++ b/package.json
@@ -28,19 +28,21 @@
   "repository": "github:futatsuhenji/tapin-attendance",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "pnpm run prisma:generate && next build",
     "build:dev": "pnpm run build --profile --debug",
-    "start": "next start",
+    "start": "pnpm run prisma:migrate && next start",
     "lint": "eslint --cache --cache-strategy content",
     "lint:fix": "pnpm run lint --fix",
-    "next:typegen": "next typegen"
+    "next:typegen": "next typegen",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate deploy",
+    "prisma:migrate:dev": "prisma migrate dev"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.7.6",
     "@next/third-parties": "^16.1.1",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
-    "cuid": "^2.1.8",
     "@tiptap/core": "^3.15.3",
     "@tiptap/extension-color": "^3.15.3",
     "@tiptap/extension-hard-break": "^3.15.3",
@@ -51,6 +53,7 @@
     "@tiptap/extension-underline": "^3.15.3",
     "@tiptap/react": "^3.15.3",
     "@tiptap/starter-kit": "^3.15.3",
+    "cuid": "^2.1.8",
     "dompurify": "^3.3.1",
     "hono": "^4.11.3",
     "isomorphic-dompurify": "^2.35.0",
@@ -59,6 +62,7 @@
     "next": "^16.1.1",
     "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
+    "prisma": "^7.2.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-modal": "^3.16.3",
@@ -81,7 +85,6 @@
     "eslint-plugin-tsdoc": "^0.5.0",
     "eslint-plugin-unicorn": "^62.0.0",
     "jiti": "^2.6.1",
-    "prisma": "^7.2.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
   },
