--- a/compose.yml
+++ b/compose.yml
@@ -9,7 +9,7 @@ services:
       POSTGRES_PASSWORD_FILE: /run/secrets/postgres_password
       TZ: Asia/Tokyo
     volumes:
-      - tapin-attendance_pgdata:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
     secrets:
       - postgres_password
     networks:
@@ -56,7 +56,7 @@ services:
       - db
 
 volumes:
-  tapin-attendance_pgdata:
+  pgdata:
 
 networks:
   app:
